--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "ext-gd": "*",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9",
-        "phpmailer/phpmailer": "^6.9"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
