--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ DB_CONNECTION=sqlite
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+DB_PATH=database/database.sqlite
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
